# chess

./: Bishop.cpp  Bishop.h  CMakeLists.txt  Figure.h  Game.cpp  Game.h  Horse.cpp  Horse.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rock.cpp  Rock.h  main.cpp
